# ChangeLog for mail-filter/dspam
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dspam/ChangeLog,v 1.76 2006/08/23 03:02:01 weeve Exp $

  23 Aug 2006; Jason Wever <weeve@gentoo.org> dspam-3.6.6.ebuild:
  Added ~sparc keyword wrt bug #144545.

  05 Jun 2006; Lim Swee Tat <st_lim@gentoo.org> dspam-3.6.6.ebuild:
  Fixes by mr_bones.  Nothing added by st_lim.  Apologies

  14 Feb 2006; Lim Swee Tat <st_lim@gentoo.org> ChangeLog:
  digest error

*dspam-3.6.4 (13 Feb 2006)

  13 Feb 2006; Lim Swee Tat <st_lim@gentoo.org> files/dspam.cron,
  +dspam-3.6.4.ebuild:
  Version bump 3.6.4

*dspam-3.6.3 (20 Jan 2006)

  20 Jan 2006; Lim Swee Tat <st_lim@gentoo.org> +dspam-3.6.3.ebuild:
  Version bump - Upgrade NOW!

  08 Jan 2006; Renat Lumpau <rl03@gentoo.org> dspam-3.2.7.ebuild,
  dspam-3.4.9.ebuild, dspam-3.6.0.ebuild, dspam-3.6.1.ebuild,
  dspam-3.6.2.ebuild:
  Fixed emerge --config wrt bug #109482.

*dspam-3.6.2 (01 Dec 2005)

  01 Dec 2005; Lim Swee Tat <st_lim@gentoo.org> +dspam-3.6.2.ebuild:
  Version bump - Maintenance release

  20 Nov 2005; Stefan Briesenick <sbriesen@gentoo.org> dspam-3.6.0.ebuild,
  dspam-3.6.1.ebuild:
  added missing 'sqlite3' use-flag.

  16 Nov 2005; Lim Swee Tat <st_lim@gentoo.org> dspam-3.6.1.ebuild:
  Patched for bug #112627

*dspam-3.6.1 (09 Nov 2005)

  09 Nov 2005; Lim Swee Tat <st_lim@gentoo.org> +dspam-3.6.1.ebuild:
  Version bump

  06 Nov 2005; Lim Swee Tat <st_lim@gentoo.org> dspam-3.6.0.ebuild:
  Fixed bug #81596.  Late. :(

  05 Nov 2005; Lim Swee Tat <st_lim@gentoo.org> ChangeLog:
  Added sqlite3 as a use flag, and removed older stuff

  05 Nov 2005; Lim Swee Tat <st_lim@gentoo.org> dspam-3.6.0.ebuild:
  Enabling sqlite3 again

  05 Nov 2005; Lim Swee Tat <st_lim@gentoo.org> dspam-3.6.0.ebuild:
  Added use flag for clamav

*dspam-3.6.0 (17 Oct 2005)

  17 Oct 2005; Lim Swee Tat <st_lim@gentoo.org> +dspam-3.6.0.ebuild: