@@ -1,0 +1,9 @@
+MD5 e74407ec17c34e366dc3955c88338724 dspam-3.6.8-patches-20061029.tar.gz 4708
+RMD160 18a0eaf66614327911c15fb11814116b4a589625 dspam-3.6.8-patches-20061029.tar.gz 4708
+SHA256 0a99b2d4c0a43a955517058de5ecffcb15a3f6dc1dfb5f676616e097b719bc19 dspam-3.6.8-patches-20061029.tar.gz 4708
+MD5 c4b1a7079690ee16d8b0f36b2a2a90a4 dspam-3.6.8.tar.gz 743275
+RMD160 93a70db14070cb61bd2ef1b0ca55a18be1dbfd7b dspam-3.6.8.tar.gz 743275
+SHA256 88c7b41fb81e90ba8a260885a1d14bce39f2ef4a06cc2c6b8bfa0b99ba1aec34 dspam-3.6.8.tar.gz 743275
+MD5 8ffe9d41e6104a4c6d19067528193145 dspam_sa_trainer.tar.gz 1230
+RMD160 c3d0fca7169d23ecf9d44c850ee255b42d97d818 dspam_sa_trainer.tar.gz 1230
+SHA256 8fb6b1ebe592acf00a028737ef8e174544af166768b987d29048b2319bc5a215 dspam_sa_trainer.tar.gz 1230
