@@ -1,6 +1,17 @@
 # ChangeLog for mail-filter/dspam
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dspam/ChangeLog,v 1.76 2006/08/23 03:02:01 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dspam/ChangeLog,v 1.77 2006/10/29 09:55:43 mrness Exp $
+
+*dspam-3.6.8 (29 Oct 2006)
+
+  29 Oct 2006; Alin Nastac <mrness@gentoo.org> -files/crontab.db4,
+  -files/crontab.mysql, metadata.xml, -dspam-3.2.7.ebuild,
+  -dspam-3.4.9.ebuild, -dspam-3.6.0.ebuild, -dspam-3.6.1.ebuild,
+  -dspam-3.6.2.ebuild, -dspam-3.6.3.ebuild, -dspam-3.6.4.ebuild,
+  -dspam-3.6.5.ebuild, +dspam-3.6.8.ebuild:
+  Add myself as maintainer. Version bump, with most Debian patches applied
+  (#135917). Fix dspam executable permissions (#128024). Remove obsolete
+  versions.
 
   23 Aug 2006; Jason Wever <weeve@gentoo.org> dspam-3.6.6.ebuild:
   Added ~sparc keyword wrt bug #144545.
